commit stage